Je sais pas trop ce que je fais.

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Portfolio de Dina</title>
-  <link href="style.css" rel = "stylesheet">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Portfolio de Dina</title>
+    <link href="style.css" rel = "stylesheet">
+  </head>
 
-<body>
-  <h1 class="name">Dina</h1>
-  <h2>Qui suis-je ?</h2>
+  <body>
+    <h1 class="name">Dina</h1>
+    <div class="topnav">
+      <h2> A propos</h2>
+    </div>
+    <h2>Qui suis-je ?</h2>
     <p>Je m'appelle Dina, j'ai 25 ans et je souhaiterais devenir développeur web Fullstack.</p>
 
-</body>
+
+  </body>
 </html>
