--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,22 @@
   </head>
 
   <body>
-    <h1 class="name">Dina</h1>
-    <div class="topnav">
-      <h2> A propos</h2>
-    </div>
+    <header>
+      <div>
+        <h1 class="name">Dina</h1>
+      </div>
+      <ul>
+        <li class="menulist">Mes passions
+          <ul class="sous-menu">
+            <li>Volleyball</li>
+            <li>Musique</li>
+            <li>Jeux-vidéo</li>
+          </ul>
+        </li>
+        <li class="menulist">Mes projets</li>
+        <li class="menulist">A propos</li>
+      </ul>
+    </header>
     <h2>Qui suis-je ?</h2>
     <p>Je m'appelle Dina, j'ai 25 ans et je souhaiterais devenir développeur web Fullstack.</p>
 
