--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Portfolio de Dina</title>
-    <link href="style.css" rel = "stylesheet">
+    <link href = "style.css" rel = "stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -11,6 +13,8 @@
       <div>
         <h1 class="name">Dina</h1>
       </div>
+    </header>
+    <nav>
       <ul>
         <li class="menulist">Mes passions
           <ul class="sous-menu">
@@ -22,10 +26,18 @@
         <li class="menulist">Mes projets</li>
         <li class="menulist">A propos</li>
       </ul>
-    </header>
-    <h2>Qui suis-je ?</h2>
-    <p>Je m'appelle Dina, j'ai 25 ans et je souhaiterais devenir développeur web Fullstack.</p>
+    </nav>
 
-
+    <div>
+      <h2 class="intro">Qui suis-je ?</h2>
+    </div>
+    <div class="firstparagraph">
+      <p>Je m'appelle Dina, j'ai 25 ans et je souhaiterais devenir développeur web Fullstack.<br>
+        J'ai suivi pendant 4 ans une licence de japonais pour laquelle je n'ai au final obtenu que la deuxième année.</p>
+    </div>
+    <footer>
+      <p><a href="mailto:dminh.public@gmail.com" target="_blank">Me contacter</a></p>
+      <a class="logo" href="https://www.youtube.com/@okimarre" target="_blank"><img src="ytlogo.png" width="70" alt="Ma page YouTube"></a>
+    </footer>
   </body>
 </html>
