--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,15 @@
     </div>
     <div class="firstparagraph">
       <p>Je m'appelle Dina, j'ai 25 ans et je souhaiterais devenir développeur web Fullstack.<br>
-        J'ai suivi pendant 4 ans une licence de japonais pour laquelle je n'ai au final obtenu que la deuxième année.</p>
+        J'ai suivi pendant 4 ans une licence de japonais pour laquelle je n'ai au final obtenu que la deuxième année.<br>
+      Depuis, je travaille dans un restaurant japonais mais je souhaiterais me reconvertir professionnellement.</p>
+      <p>J'ai pu actuellement apprendre à coder en Python, JavaScript et HTML/CSS en autodidacte.<br>
+      Je suis admis à La Capsule à partir du 24 mars pour deux mois de formation intensive.</p>
+      <p>Avant, pendant et après cette formation, je compte me servir de ce site portfolio afin de<br>
+      mettre en avant et répertorier mes différents projets ainsi que des informations générales<br>
+      à mon propos.</p>
+
+
     </div>
     <footer>
       <p><a href="mailto:dminh.public@gmail.com" target="_blank">Me contacter</a></p>
