J'ai amélioré le menu déroulant en le changeant en grid

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,16 @@
       </div>
     </header>
     <nav>
-      <ul>
-        <li class="menulist">Mes passions
-          <ul class="sous-menu">
-            <li>Volleyball</li>
-            <li>Musique</li>
-            <li>Jeux-vidéo</li>
+      <ul class="menulist">
+        <li class="mainmenu m1">Mes passions
+          <ul class="submenulist list1">
+            <li class="submenu s1">Volleyball</li>
+            <li class="submenu s2">Musique</li>
+            <li class="submenu s3">Jeux-vidéo</li>
           </ul>
         </li>
-        <li class="menulist">Mes projets</li>
-        <li class="menulist">A propos</li>
+        <li class="mainmenu m2">Mes projets</li>
+        <li class="mainmenu m3">A propos</li>
       </ul>
     </nav>
 
