Je sais pas comment mais position: sticky fonctionne maintenant.

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,14 +33,16 @@
     <div class="intro">
       <h2>Qui suis-je ?</h2>
     </div>
-    <p class="firstparagraph">Je m'appelle Dina, j'ai 25 ans et je souhaiterais devenir développeur web Fullstack.<br>
-        J'ai suivi pendant 4 ans une licence de japonais pour laquelle je n'ai au final obtenu que la deuxième année.<br>
-      Depuis, je travaille dans un restaurant japonais mais je souhaiterais me reconvertir professionnellement.</p>
-    <p class="firstparagraph">J'ai pu actuellement apprendre à coder en Python, JavaScript et HTML/CSS en autodidacte.<br>
-      Je suis admis à La Capsule à partir du 24 mars pour deux mois de formation intensive.</p>
-    <p class="firstparagraph">Avant, pendant et après cette formation, je compte me servir de ce site portfolio afin de<br>
-      mettre en avant et répertorier mes différents projets ainsi que des informations générales<br>
-      à mon propos.</p>
+    <div >
+      <p class="firstparagraph">Je m'appelle Dina, j'ai 25 ans et je souhaiterais devenir développeur web Fullstack.<br>
+          J'ai suivi pendant 4 ans une licence de japonais pour laquelle je n'ai au final obtenu que la deuxième année.<br>
+        Depuis, je travaille dans un restaurant japonais mais je souhaiterais me reconvertir professionnellement.</p>
+      <p class="firstparagraph">J'ai pu actuellement apprendre à coder en Python, JavaScript et HTML/CSS en autodidacte.<br>
+        Je suis admis à La Capsule à partir du 24 mars pour deux mois de formation intensive.</p>
+      <p class="firstparagraph">Avant, pendant et après cette formation, je compte me servir de ce site portfolio afin de<br>
+        mettre en avant et répertorier mes différents projets ainsi que des informations générales<br>
+        à mon propos.</p>
+    </div>
     <footer>
       <p><a href="mailto:dminh.public@gmail.com" target="_blank">Me contacter</a></p>
       <a class="logo" href="https://www.youtube.com/@okimarre" target="_blank"><img src="ytlogo.png" width="70" alt="Ma page YouTube"></a>
